fix: height and overflow bug for mat tab contents

--- a/Frontend/togetherapp/src/app/profile/components/main-content-tabs/main-content-tabs.component.scss
+++ b/Frontend/togetherapp/src/app/profile/components/main-content-tabs/main-content-tabs.component.scss
@@ -10,3 +10,7 @@
 ::ng-deep .mat-mdc-tab-body-content {
   overflow-y: hidden !important;
 }
+
+::ng-deep .mat-mdc-tab-body-wrapper {
+  height: 100% !important;
+}
